--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -1,12 +1,45 @@
 name: Build-CI
 on:
   pull_request:
-    branches: [Develop, main-net-runtime]
+    branches: [Develop, main-net-runtime,redux-ci-test]
   push:
-    branches: [Develop, main-net-runtime]
+    branches: [Develop, main-net-runtime,redux-ci-test]
+env:
+  RUNNER_INSTANCE_TYPE: c5.4xlarge    
 jobs:
-  build:
+  start-runner:
+    name: Start self-hosted EC2 runner
     runs-on: ubuntu-latest
+    outputs:
+      label: ${{ steps.start-ec2-runner.outputs.label }}
+      ec2-instance-id: ${{ steps.start-ec2-runner.outputs.ec2-instance-id }}
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+      - name: Start EC2 runner
+        id: start-ec2-runner
+        uses: machulav/ec2-github-runner@v2
+        with:
+          mode: start
+          github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+          ec2-image-id: ami-06de69a4185c962ed
+          ec2-instance-type: ${{ env.RUNNER_INSTANCE_TYPE }}
+          subnet-id: subnet-a4d326e8
+          security-group-id: sg-078363c0f7b5f0b41
+          iam-role-name: github-runner-role 
+          aws-resource-tags: > 
+            [
+              {"Key": "Name", "Value": "github-runner"},
+              {"Key": "GitHubRepository", "Value": "${{ github.repository }}"}
+            ]
+  build:
+    needs: start-runner
+    runs-on: ${{ needs.start-runner.outputs.label }} 
+    
     steps:
       - uses: actions/checkout@v2
       - name: Cache Rust Dependecies
@@ -64,3 +97,24 @@ jobs:
         with:
           name: code-coverage-report
           path: cobertura.xml
+  stop-runner:
+    name: Stop self-hosted EC2 runner
+    needs:
+      - start-runner 
+      - build
+    runs-on: ubuntu-latest
+    if: ${{ always() }} # required to stop the runner even if the error happened in the previous jobs
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+      - name: Stop EC2 runner
+        uses: machulav/ec2-github-runner@v2
+        with:
+          mode: stop
+          github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+          label: ${{ needs.start-runner.outputs.label }}
+          ec2-instance-id: ${{ needs.start-runner.outputs.ec2-instance-id }}        
