--- a/pallets/asset-handler/rpc/Cargo.toml
+++ b/pallets/asset-handler/rpc/Cargo.toml
@@ -6,13 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-codec = { version = "3.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
-serde = { version = "1.0.68", optional = true }
-jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
-sp-rpc = {   git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28",default-features = false }
-sp-blockchain = {   git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
-sp-api = {   git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
-sp-runtime = {   git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
-pallet-asset-handler-runtime-api = {path = "runtime-api" }
-polkadex-primitives = { default-features = false, tag = "polkadot-v0.9.28v0.1.10", git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git" }
-
+serde = { version = "1.0.136" }
+parity-scale-codec = { workspace = true, features = ["derive"] }
+jsonrpsee = { workspace = true, features = ["server", "macros"] }
+sp-rpc = { workspace = true }
+sp-blockchain = { workspace = true }
+sp-api = { workspace = true }
+sp-runtime = { workspace = true }
+polkadex-primitives = { workspace = true }
+pallet-asset-handler-runtime-api = { path = "runtime-api" }
