--- a/pallets/chainbridge/Cargo.toml
+++ b/pallets/chainbridge/Cargo.toml
@@ -11,29 +11,39 @@ publish = false
 repository = "https://github.com/ChainSafe/chainbridge-substrate"
 
 [dependencies]
-log = "0.4"
-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["max-encoded-len"] }
-frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
-frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false,  optional = true }
-frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
-scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
-sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
-sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
-sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
-sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
-pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
-blake2-rfc = { version = "0.2.18", default-features = false }
+log = { workspace = true, default-features = false }
+parity-scale-codec = { workspace = true, default-features = false, features = ["max-encoded-len"] }
+frame-support = { workspace = true, default-features = false }
+frame-benchmarking = { workspace = true, default-features = false,  optional = true }
+frame-system = { workspace = true, default-features = false }
+scale-info = { workspace = true, default-features = false, features = ["derive"] }
+sp-core = { workspace = true, default-features = false}
+sp-io = { workspace = true, default-features = false }
+sp-std = { workspace = true, default-features = false }
+sp-runtime = { workspace = true, default-features = false }
+pallet-balances = { workspace = true, default-features = false }
+blake2-rfc = { workspace = true, default-features = false }
 
 [features]
 default = ["std"]
-runtime-benchmarks = ["frame-benchmarking"]
 std = [
-    "codec/std",
-    "scale-info/std",
-    "sp-std/std",
+    "log/std",
+    "parity-scale-codec/std",
     "frame-support/std",
     "frame-system/std",
-    "frame-benchmarking/std",
+    "scale-info/std",
+    "sp-core/std",
+    "sp-io/std",
+    "sp-std/std",
+    "sp-runtime/std",
     "pallet-balances/std",
+    "blake2-rfc/std",
+]
+runtime-benchmarks = [
+    "frame-benchmarking/runtime-benchmarks",
+    "frame-support/runtime-benchmarks",
+    "frame-system/runtime-benchmarks",
+    "sp-runtime/runtime-benchmarks",
+    "pallet-balances/runtime-benchmarks"
 ]
 try-runtime = ["frame-support/try-runtime"]
