feat: run function for fetching latest messages

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "pallets/asset-handler",
     "pallets/pdex-migration",
     "pallets/ocex",
+    "relayer"
 ]
 
 [patch."https://github.com/open-web3-stack/open-runtime-module-library.git"]
