rewards pallet two extrinsic + test cases added

--- a/pallets/rewards/Cargo.toml
+++ b/pallets/rewards/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "rewards"
-version = "3.0.0"
+version = "1.0.0"
 edition = "2018"
 authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
 repository = 'https://github.com/substrate-developer-hub/recipes'
-description = "A pallet that emits simple events that do not encapsulate generic data types"
+description = "A pallet that will give parachain rewards to participants"
 license = "GPL-3.0-or-later"
 
 [package.metadata.docs.rs]
