--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ members = [
     "pallets/asset-handler",
     "pallets/pdex-migration",
     "pallets/ocex",
-    "pallets/thea"
+    "pallets/thea",
+    "thea-primitives"
 ]
 
 [patch."https://github.com/open-web3-stack/open-runtime-module-library.git"]
